--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
     </div>
   </section>
   <section id="resume-parent">
+      <h1>RESUME</h1>
     <div class="resume-child">
+        
       <div class="div-title">Education</div>
+
       <ul>
         <li>South Gate High</li>
         <li>10th Grade</li>
